[project]
name = "pulse-agents"
version = "1.0.0"
description = "PULSE Agent Runtime - Autonomous agents for code intelligence"
authors = [{ name = "PULSE Team" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pulse-agent = "pulse_agents.cli:main"
